--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "bitcask-rs"
 version = "0.1.0"
 edition = "2021"
 authors = ["Liangrun Da <me@liangrunda.com>"]
+description = "A Rust implementation of Bitcask"
+readme = "README.md"
+repository = "https://github.com/liangrunda/bitcask-rs"
+license = "MIT"
+license-file = "LICENSE"
+keywords = ["bitcask", "database"]
+exclude = ["data/*"]
+publish = ["bitcask-rs"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,3 +22,6 @@ tracing-appender = "0.2.2"
 tracing-subscriber = "0.3.17"
 crc= { version = "3.0.1" }
 rand = "0.8.5"
+
+[badges]
+maintenance = { status = "actively-developed" }
